# flask-react-heroku-practice

./: .gitignore  README.md  api.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
client/src/: App.jsx
server/: api.py  pyproject.toml
src/: App.jsx
